--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=7.4",
         "ext-json": "*",
-        "api-platform/core": "^2.6@dev",
+        "api-platform/core": "dev-main",
         "doctrine/orm": "^2.7",
         "doctrine/annotations": "^1.10",
         "symfony/http-client": "^5.1",
@@ -36,5 +36,11 @@
         "psr-4": {
             "App\\": "tests/app/"
         }
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "git@github.com:api-platform/core.git"
+        }
+    ]
 }
